--- a/index.html
+++ b/index.html
@@ -1,126 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Pop Music Radio | Enjoy</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='glow.css'>
-    <script src='main.js'></script>
-    <link href="inconsolata/inconsolata.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="https://lyeliect.sirv.com/Images/20250112_150710.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SATURN RADIO</title>
     <style>
-        #popup {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #1e1e1e;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-image: url("https://res.cloudinary.com/dye3ddhkt/image/upload/v1736688732/saturnbackground2_a5ovjj.jpg");
             color: #fff;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-            z-index: 1000;
-            text-align: center;
-            display: none;
+            background-size: cover;
+            background-position: center;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
-        #popup h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
         }
 
-        #popup p {
-            margin-bottom: 20px;
-        }
-
-        #popup a {
-            color: #7E60BF;
+        nav a {
+            color: #fff;
             text-decoration: none;
+            opacity: 0.7;
+            font-size: 1rem;
+            transition: opacity 0.2s;
+        }
+
+        nav a:hover {
+            opacity: 1;
+        }
+
+        main {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem;
+            text-align: center;
+            gap: 2rem;
+        }
+
+        .logo {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            background-image: url("https://lyeliect.sirv.com/Images/20250112_150652.jpg");
+            background-size: cover;
+            background-position: center;
+            animation: pulse 4s ease-in-out infinite;
+        }
+
+
+        h1 {
+            font-size: 3rem;
             font-weight: bold;
+            letter-spacing: 2px;
         }
 
-        #popup a:hover {
-            text-decoration: underline;
+        p {
+            color: #aaa;
+            font-size: 1.1rem;
         }
 
-        #popup button {
-            background-color: #7E60BF;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
+        /* RESPONSIVENESS */
+        @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+            }
+
+            main {
+                gap: 1.5rem;
+            }
+
+            .logo {
+                width: 200px;
+                height: 200px;
+            }
+
+            h1 {
+                font-size: 2.5rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
         }
 
-        #popup button:hover {
-            background-color: #5e4692;
-        }
+        @media (max-width: 480px) {
+            nav {
+                padding: 1rem;
+            }
 
-        #overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
+            .logo {
+                width: 150px;
+                height: 150px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+        }
+        video {
+            position: absolute;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            z-index: 999;
-            display: none;
-        }
+            object-fit: cover;
+            top: 0;
+            left: 0;
+            z-index: -5;
+}
     </style>
 </head>
 <body>
     <nav>
-        <div id="topmenu">
-            <div>
-                <button id="menuButton" onclick="openAboutUs()">About Us & DMCA</button>
-                <button id="menuButton" onclick="openViraSoftware()">Vira Software</button>
-                <button id="menuButton" onclick="openGitHub()">GitHub</button>
-                <button id="menuButton" onclick="openSerenDipiWare()">Serendipiware</button>
-            </div>
-        </div>
+        <a href="aboutus.html">About Us & DMCA</a>
+        <a href="https://github.com/LeonidasChalikias">GitHub</a>
     </nav>
-    <div id="liveSign">
-        <div id="liveSignCircle"></div>
-        <div>
-            <span id="liveSignText">Live</span>
-        </div>
-    </div>
-    <div id="mainItems">
-        <div id="logoDiv">
-            <div class="glow"></div>
-        </div>
-        <div id="logoTextDiv">
-            <h1 id="logoText">POP MUSIC RADIO</h1>
-            <p id="slogan">Enjoy</p>
-            <button id="buttonPlay" onclick="playStream()">PLAY</button>
-        </div>
-    </div>
-
-    <div id="overlay"></div>
-
-    <div id="popup">
-        <h2>Exciting News!</h2>
-        <p>We're renaming to <strong>Saturn Radio</strong>! 🎵</p>
-        <a href="https://saturnradio.netlify.app/" target="_blank">Check it out here!</a>
-        <br><br>
-        <button onclick="closePopup()">Got it!</button>
-    </div>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const popup = document.getElementById('popup');
-            const overlay = document.getElementById('overlay');
-
-            popup.style.display = 'block';
-            overlay.style.display = 'block';
-
-            window.closePopup = function() {
-                popup.style.display = 'none';
-                overlay.style.display = 'none';
-            };
-        });
-    </script>
+    <main>
+        <div class="logo"></div>
+        <h1>SATURN RADIO</h1>
+        <p>Coming soon from popmusicradio.live</p>
+    </main>
+    <video autoplay muted loop playsinline>
+        <source src="background.mp4" type="video/mp4">
+      </video>
 </body>
 </html>
