linked and added the glow css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="https://lyeliect.sirv.com/Images/20250112_150710.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="glow.css">
     <title>SATURN RADIO</title>
     <style>
         * {
@@ -52,18 +53,6 @@
             text-align: center;
             gap: 2rem;
         }
-
-        .logo {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            background-image: url("https://lyeliect.sirv.com/Images/20250112_150652.jpg");
-            background-size: cover;
-            background-position: center;
-            animation: pulse 4s ease-in-out infinite;
-        }
-
-
         h1 {
             font-size: 3rem;
             font-weight: bold;
@@ -136,7 +125,7 @@
         <a href="https://github.com/LeonidasChalikias">GitHub</a>
     </nav>
     <main>
-        <div class="logo"></div>
+        <div class="glow"></div>
         <h1>SATURN RADIO</h1>
         <p>Coming soon from popmusicradio.live</p>
     </main>
@@ -145,3 +134,4 @@
       </video>
 </body>
 </html>
+
