New look for the About Us page. And menu buttons are opening in a new tab.

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
 </head>
 <body>
     <nav>
-        <a href="aboutus.html">About Us & DMCA</a>
-        <a href="https://github.com/LeonidasChalikias">GitHub</a>
+        <a href="aboutus.html" target="_blank">About Us & DMCA</a>
+        <a href="https://github.com/LeonidasChalikias/SaturnRadio" target="_blank">GitHub</a>
     </nav>
     <main>
         <div class="glow"></div>
         <h1>SATURN RADIO</h1>
-        <p>Coming soon from popmusicradio.live</p>
+        <p>Your futuristic open source radio station. Enjoy</p>
     </main>
     <video autoplay muted loop playsinline>
         <source src="background.mp4" type="video/mp4">
