--- a/aboutus.html
+++ b/aboutus.html
@@ -1,32 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>About Us | PMR Enjoy</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - Saturn Radio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <script src='main.js'></script>
-    <link rel="icon" type="image/x-icon" href="https://lyeliect.sirv.com/Images/file-BN9GWbNfRgC6MPFv1foZkz.webp">
     <style>
-        h1 {
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            color: #fff;
-        }
         body {
-            background-color: #000000;
-        }
-        h2 {
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(#1b263b 40%, #415a77 100%);
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100vh;
             color: #fff;
+            overflow-x: hidden;
+        }
+        header {
+            text-align: center;
+            padding: 20px 0;
+            background: rgba(0, 0, 0, 0.7);
+            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+        }
+        header h1 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 2.5rem;
+            color: #ffcc00;
+        }
+        .container {
+            padding: 40px 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        .container h2 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 2rem;
+            color: #ffd700;
+        }
+        .container p {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            margin: 20px 0;
+            color: #d6d6d6;
+        }
+        .stars {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background: url('https://www.transparenttextures.com/patterns/stardust.png');
+        }
+        footer {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 0.9rem;
+            color: #aaa;
         }
     </style>
 </head>
 <body>
-    <h1>Page Not Ready Yet</h1>
-    <h1>For DMCA takedown or any other legal issue, please do not take any action before contacting first, for further questions or advestising opportunities contact us at contact@popmusicradio.live</h1>
-<h2>Thank you for visiting <a href="https://popmusicradio.live/">PopMusicRadio.live</a></h2>
+    <div class="stars"></div>
+    <header>
+        <h1>Saturn Radio</h1>
+    </header>
+    <div class="container">
+        <h2>About Us & DMCA</h2>
+        <p>Page Not Ready Yet.
+For DMCA takedown or any other legal issue, please do not take any action before contacting first, for further questions or advestising opportunities contact us at contact@saturnradio.com</p>
+        <p>Saturn Radio brings you the music of the cosmos, connecting people through stellar beats and out-of-this-world vibes. Tune in and let the universe inspire you. Thanks to our contributors Serendipiware for helping us making this possible. Want to contribute and be here? Open up our GitHub Page!</p>
+    </div>
+    <footer>
+        &copy; 2025 Saturn Radio. All rights reserved.
+    </footer>
 </body>
 </html>
