--- a/index.html
+++ b/index.html
@@ -5,119 +5,9 @@
     <link rel="icon" type="image/x-icon" href="https://lyeliect.sirv.com/Images/20250112_150710.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="glow.css">
+    <link rel="stylesheet" href="style.css">
     <title>SATURN RADIO</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        body {
-            background-image: url("https://res.cloudinary.com/dye3ddhkt/image/upload/v1736688732/saturnbackground2_a5ovjj.jpg");
-            color: #fff;
-            background-size: cover;
-            background-position: center;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            opacity: 0.7;
-            font-size: 1rem;
-            transition: opacity 0.2s;
-        }
-
-        nav a:hover {
-            opacity: 1;
-        }
-
-        main {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 2rem;
-            text-align: center;
-            gap: 2rem;
-        }
-        h1 {
-            font-size: 3rem;
-            font-weight: bold;
-            letter-spacing: 2px;
-        }
-
-        p {
-            color: #aaa;
-            font-size: 1.1rem;
-        }
-
-        /* RESPONSIVENESS */
-        @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-                align-items: center;
-                gap: 1rem;
-            }
-
-            main {
-                gap: 1.5rem;
-            }
-
-            .logo {
-                width: 200px;
-                height: 200px;
-            }
-
-            h1 {
-                font-size: 2.5rem;
-            }
-
-            p {
-                font-size: 1rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            nav {
-                padding: 1rem;
-            }
-
-            .logo {
-                width: 150px;
-                height: 150px;
-            }
-
-            h1 {
-                font-size: 2rem;
-            }
-
-            p {
-                font-size: 0.9rem;
-            }
-        }
-        video {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            top: 0;
-            left: 0;
-            z-index: -5;
-}
-    </style>
 </head>
 <body>
     <nav>
@@ -130,7 +20,7 @@
         <p>Your futuristic open source radio station. Enjoy</p>
     </main>
     <video autoplay muted loop playsinline>
-        <source src="background.mp4" type="video/mp4">
+        <source src="https://lyeliect.sirv.com/Images/background.mp4" type="video/mp4">
       </video>
 </body>
 </html>
